1.前端完成 2.改写login.jsp

--- a/pan_view/login.html
+++ b/pan_view/login.html
@@ -63,7 +63,7 @@
             </section>
             <!-- 修改这里代码需要改js的才能生效 -->
         </div>
-        <div id="mask" style="width: 400px;height: 400px;border-radius: 10px;"> <!--主登录界面-->
+        <div id="mask"> <!--主登录界面-->
             <div id="login_main" style="position: absolute; margin-left: 0px;">
                 <center>
                     <div style="font-size: 35px;margin-top: 15px;">登录</div>
