数据库结构优化

--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -137,7 +137,11 @@
                 </div>
 
                 <div style="padding-right: 20px;padding-left: 20px;">
-                    <span>全部文件</span>
+                    <ol class="breadcrumb" style="">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Library</a></li>
+                        <li class="active">Data</li>
+                    </ol>
                     <div style="float: right">
                         <span id="file_load_all">已全部加载</span>
                         <span>,共</span>
